@@ -8,8 +8,9 @@ Fixed reset / NMI handling for IDSA V-1
 Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
 Fix Rescue 911 (and maybe more: SFII, WCS, Shaq, mZOIS?) DMD brightness level mapping regression
 Improved Punky Willy sound emulation
-Fixed sound for Taito Sure Shot and Mr. Black (NMI line needs to be pulsed for these games, Sure Shot sounds awful like the real thing)
+Fixed sound for Taito Sure Shot (sounds awful, but like the real thing :)) and Mr. Black (Z-80 version still misses sound rom dumps though) (NMI line needs to be pulsed for these games)
 Made speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
+Add emulation pause support for alternate sound
 
 *** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren, barakandl
 New:
@@ -29,6 +30,7 @@ Demolition Man LX-4C (competition MOD)
 Demolition Man H-5C (competition MOD)
 Demolition Man H-6C (competition MOD)
 Dirty Harry LF-2
+Eight Ball (Older version)
 Getaway: High Speed II, The L-5C (competition MOD)
 Junk Yard 1.2C (competition MOD)
 Meteor (Bugfix)
@@ -36,6 +38,7 @@ Orbitor 1 (No Timed Game)
 Star Trek: The Next Generation LX-7C (competition MOD)
 Star Wars 20th Anniversary 1.07 Spanish
 Time Warp L-3
+Trident (Newer version, previous trident set was renamed to tridenta)
 
 
 
